General Commit AvailabilityChecker DataAccess entranceActivity FavoriteCarParks Locations MapsActivity activity_entrance.xml activity_favorite_car_parks.xml activity_locations.xml activity_maps.xml strings.xml AndroidManifest.xml build.gradle parkankara_temporary_logo 10/12/2019 11:11

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Park Ankara</string>
     <string name="title_activity_entrance">Park Ankara</string>
     <string name="title_activity_maps">Harita</string>
+    <string name="Favoriler">FAVORİLER</string>
 </resources>
